JUnit 5 migration: module distro/run (#387)
Refactor code for distro/run to JUnit 5:

- Perform OpenRewrite recipes for initial migration:
org.openrewrite.java.testing.junit5.JUnit4to5Migration,org.openrewrite.java.testing.cleanup.RemoveTestPrefix,org.openrewrite.java.testing.cleanup.TestsShouldNotBePublic,org.openrewrite.java.testing.assertj.JUnitToAssertj
- Add SeleniumScreenshotExtension, mark SeleniumScreenshotRule deprecated
- Fix parametrized tests
- Code cleanup

related to #27